# GaussriemanH.264

./: .gitignore  CMakeLists.txt  Makefile  x264.c
SMP/: appveyor.yml  libx264.sln  libx264.vcxproj  libx264.vcxproj.filters  x264cli.vcxproj  x264cli.vcxproj.filters
SMP/msvc/: libx264d.idb
SMP/msvc/MBInfo_Qp25_ori/: Qp25-ori.txt
common/: common.h  frame.h  macroblock.c  macroblock.h  predict.h
encoder/: HRecognize.c  HRecognize.h  analyse.c  analyse.h  cavlc.c  detectText.c  detectText.h  encodeText.c  encodeText.h  encoder.c  huffman.c  huffman.h  macroblock.c
