cmake_minimum_required(VERSION 3.5)
project(x264_0_148_r2795_1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    common/aarch64/asm-offsets.c
    common/aarch64/asm-offsets.h
    common/aarch64/dct.h
    common/aarch64/mc-c.c
    common/aarch64/mc.h
    common/aarch64/pixel.h
    common/aarch64/predict-c.c
    common/aarch64/predict.h
    common/aarch64/quant.h
    common/arm/dct.h
    common/arm/mc-c.c
    common/arm/mc.h
    common/arm/pixel.h
    common/arm/predict-c.c
    common/arm/predict.h
    common/arm/quant.h
    common/mips/dct-c.c
    common/mips/dct.h
    common/mips/deblock-c.c
    common/mips/macros.h
    common/mips/mc-c.c
    common/mips/mc.h
    common/mips/pixel-c.c
    common/mips/pixel.h
    common/mips/predict-c.c
    common/mips/predict.h
    common/mips/quant-c.c
    common/mips/quant.h
    common/opencl/x264-cl.h
    common/ppc/dct.c
    common/ppc/dct.h
    common/ppc/deblock.c
    common/ppc/mc.c
    common/ppc/mc.h
    common/ppc/pixel.c
    common/ppc/pixel.h
    common/ppc/ppccommon.h
    common/ppc/predict.c
    common/ppc/predict.h
    common/ppc/quant.c
    common/ppc/quant.h
    common/x86/dct.h
    common/x86/mc-c.c
    common/x86/mc.h
    common/x86/pixel.h
    common/x86/predict-c.c
    common/x86/predict.h
    common/x86/quant.h
    common/x86/util.h
    common/bitstream.c
    common/bitstream.h
    common/cabac.c
    common/cabac.h
    common/common.c
    common/common.h
    common/cpu.c
    common/cpu.h
    common/dct.c
    common/dct.h
    common/deblock.c
    common/frame.c
    common/frame.h
    common/macroblock.c
    common/macroblock.h
    common/mc.c
    common/mc.h
    common/mvpred.c
    common/opencl.c
    common/opencl.h
    common/osdep.c
    common/osdep.h
    common/pixel.c
    common/pixel.h
    common/predict.c
    common/predict.h
    common/quant.c
    common/quant.h
    common/rectangle.c
    common/rectangle.h
    common/set.c
    common/set.h
    common/threadpool.c
    common/threadpool.h
    common/vlc.c
    common/win32thread.c
    common/win32thread.h
    encoder/analyse.c
    encoder/analyse.h
    encoder/cabac.c
    encoder/cavlc.c
    encoder/encoder.c
    encoder/lookahead.c
    encoder/macroblock.c
    encoder/macroblock.h
    encoder/me.c
    encoder/me.h
    encoder/ratecontrol.c
    encoder/ratecontrol.h
    encoder/rdo.c
    encoder/set.c
    encoder/set.h
    encoder/slicetype-cl.c
    encoder/slicetype.c
    extras/avisynth_c.h
    extras/avxsynth_c.h
    extras/cl.h
    extras/cl_platform.h
    extras/getopt.c
    extras/getopt.h
    extras/intel_dispatcher.h
    extras/inttypes.h
    extras/stdint.h
    filters/video/cache.c
    filters/video/crop.c
    filters/video/depth.c
    filters/video/fix_vfr_pts.c
    filters/video/internal.c
    filters/video/internal.h
    filters/video/resize.c
    filters/video/select_every.c
    filters/video/source.c
    filters/video/video.c
    filters/video/video.h
    filters/filters.c
    filters/filters.h
    input/avs.c
    input/ffms.c
    input/input.c
    input/input.h
    input/lavf.c
    input/raw.c
    input/thread.c
    input/timecode.c
    input/y4m.c
    output/flv.c
    output/flv_bytestream.c
    output/flv_bytestream.h
    output/matroska.c
    output/matroska_ebml.c
    output/matroska_ebml.h
    output/mp4.c
    output/mp4_lsmash.c
    output/output.h
    output/raw.c
    SMP/common/oclobj.h
    SMP/msvc/include/x264.h
    SMP/msvc/include/x264_config.h
    SMP/config.h
    SMP/x264_config.h
    tools/checkasm.c
    example.c
    x264.c
    x264.h
    x264cli.h
    x264dll.c)

add_executable(x264_0_148_r2795_1 ${SOURCE_FILES})